<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyRidesActivity">


    <ImageView
        android:id="@+id/imgCarLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignParentTop="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/ptc_logo_2" />

    <ListView
        android:id="@+id/myRidesList"

        android:layout_width="366dp"
        android:layout_height="397dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMyRidesReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCarLogo"
        app:layout_constraintVertical_bias="0.936" />

    <TextView
        android:id="@+id/txtDestTitle"
        android:layout_width="111dp"
        android:layout_height="42dp"
        android:layout_marginBottom="36dp"
        android:text="@string/Destination"
        android:textColor="@color/PTCBlue"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/myRidesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPickUpLocTitle"
        android:layout_width="166dp"
        android:layout_height="31dp"
        android:text="@string/PickupLocation"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtDestTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCarLogo"
        app:layout_constraintVertical_bias="0.323" />

    <TextView
        android:id="@+id/txtRideDateTTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Datetime"
        android:textColor="@color/PTCBlue"
        app:layout_constraintBottom_toTopOf="@+id/myRidesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCarLogo"
        app:layout_constraintVertical_bias="0.013" />

    <Button
        android:id="@+id/btnMyRidesReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="52dp"
        android:text="Return to Menu"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>