<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <ImageView
        android:id="@+id/welcomeLeftLines2"
        android:layout_width="349dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ptc_lines_left" />

    <ImageView
        android:id="@+id/welcomeRightLines2"
        android:layout_width="369dp"
        android:layout_height="94dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ptc_lines_right" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="187dp"
        android:layout_height="161dp"
        app:layout_constraintBottom_toTopOf="@+id/welcomeRightLines2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLeftLines2"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/placeholder" />

    <TextView
        android:id="@+id/FirstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FirstNameText"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toTopOf="@+id/welcomeRightLines2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.16" />

    <TextView
        android:id="@+id/LastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LastNameText"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstNameText"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/RiderScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RiderScoreText"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toTopOf="@+id/welcomeRightLines2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.286"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastNameText"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/DriverScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DriverScoreText"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toTopOf="@+id/welcomeRightLines2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RiderScoreText"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/btnMainMyRides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/btnReturnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return Home"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <TextView
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/FirstNameText"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/LastNameText"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/txtRiderScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toEndOf="@+id/RiderScoreText"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/txtDriverScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toEndOf="@+id/DriverScoreText"
        app:layout_constraintTop_toBottomOf="@+id/txtRiderScore"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/txtRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/btnCarInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Car Info"
        android:textColor="@color/ptc_DkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnReturnHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>